raw_cppcheck/256947_report.txt
einsum_op_impl.h:9:5: error: Code 'gtl::InlinedVector' is invalid C code. Use --std or --language to configure the language. [syntaxError]
    gtl::InlinedVector<string, 2> input_str;
    ^
nofile:0:0: information: Active checkers: There was critical errors (use --checkers-report=<filename> to see details) [checkersReport]

